--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,3 +16,21 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+
+app:
+  security:
+    cors:
+      allowed-origins:
+        - "http://localhost:3000"
+    jwt:
+      secret: "SELETIVOSENIORSEPLAGMT2026VOUTENTARPASSAR"
+      access-token-ttl: 5m
+      refresh-token-ttl: 30m
+      issuer: "seletivo-api"
+    user:
+      username: "admin"
+      password: "admin123"
+      roles:
+        - "USER"
+    rate-limit:
+      requests-per-minute: 10
